--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <section id="about">
         <div class="container">
             <h2>塾の概要</h2>
-            <p>未来学習塾では、オンラインを活用した柔軟で効果的な学習を提供します。最新のテクノロジーと専門講師によるサポートで、生徒一人ひとりの成長を支えます。</p>
-            <img src="future-classroom.jpg" alt="近未来的な教室のイメージ">
+            <p>未来学習塾は、全国どこからでもアクセス可能なオンライン学習塾です。最新の教育技術を活用し、生徒一人ひとりの理解度に応じたカリキュラムを提供します。講師陣は経験豊富な教育のプロフェッショナルが揃い、オンラインならではの柔軟な学習環境を実現しています。</p>
+            <p>学校の授業の補習から受験対策まで、幅広いニーズに対応し、個々の学習目標達成をサポートします。日々の学習サポートに加え、定期的な進捗確認とカウンセリングを実施し、学習の定着を図ります。</p>
+            <img src="future-classroom.jpg" alt="近未来的な教室のイメージ" class="small-image">
         </div>
     </section>
 
@@ -41,9 +42,11 @@
         <div class="container">
             <h2>特徴</h2>
             <ul>
-                <li>最新AI技術を活用した個別指導</li>
-                <li>フレキシブルな学習スケジュール</li>
-                <li>全国どこからでも参加可能</li>
+                <li>最新AI技術を活用した個別指導で、生徒ごとの最適な学習プランを提供</li>
+                <li>フレキシブルな学習スケジュールで、部活動や習い事との両立が可能</li>
+                <li>全国どこからでも参加可能で、地域の学習環境に左右されない教育を実現</li>
+                <li>定期的な進捗確認とフィードバックで、確実な成長をサポート</li>
+                <li>専門講師によるオンラインライブ授業と、充実した学習コンテンツ</li>
             </ul>
         </div>
     </section>
@@ -51,7 +54,21 @@
     <section id="pricing">
         <div class="container">
             <h2>月額受講料</h2>
-            <p>月額: 8,000円（税込）</p>
+            <div class="pricing-plan">
+                <h3>ライトプラン</h3>
+                <p>月額: 5,000円（税込）</p>
+                <p>週1回のオンライン授業 + 個別チャットサポート</p>
+            </div>
+            <div class="pricing-plan">
+                <h3>スタンダードプラン</h3>
+                <p>月額: 8,000円（税込）</p>
+                <p>週2回のオンライン授業 + 個別指導 + チャットサポート</p>
+            </div>
+            <div class="pricing-plan">
+                <h3>プレミアムプラン</h3>
+                <p>月額: 12,000円（税込）</p>
+                <p>週3回のオンライン授業 + 個別指導 + 受験対策 + 進路相談</p>
+            </div>
             <p>※初月無料体験あり</p>
         </div>
     </section>
